2004-11-08 hugo303

	* src/check.c, src/check.h.in, src/check_impl.h, src/check_run.c,
	tests/check_check_master.c, tests/check_check_sub.c:
	Added support for testing on expected signals. Implementation
	courtesy of Lucas Di Pentima and Cesar Ballardini. Also cleaned
	up the test verification to simplify merging of new tests.

2004-11-04 hugo303

        * src/check.c, src/check_list.c, src/check_list.h, src/check_log.c,
	src/check_msg.c, tests/check_list.c:
	Changed name on function list_create to check_list_create to avoid
	name clash.

2004-11-04 hugo303

	* src/check.c, src/check.h.in, tests/check_check_master.c,
	tests/check_check_sub.c: Applied ANSI C99 patch (#1047014)

2004-08-20 hugo303

	* doc/tutorial.sgml: Updated with new features.

2004-08-18 hugo303

	* src/check.c, src/check.h.in, src/check_impl.h, src/check_log.c,
	src/check_log.h, src/check_print.c, src/check_print.h,
	src/check_run.c, tests/Makefile.am, tests/check_check_log.c,
	tests/ex_xml_output.c, tests/test_xml_output.sh:
	Added support for XML output of the test results, courtesy of
	Frederic Peters.

2004-08-18 hugo303

	* src/check_run.c, tests/check_check_fixture.c: Fixed setup bug
	from forum, failure in setup did not abort test in nofork mode.
	Added test cases for bug.

2004-08-17 hugo303

	* src/check_pack.c: Use stdint.h for specific sized type.
	* src/check.c, src/check.h.in, tests/check_check_master.c,
	tests/check_check_sub.c, ChangeLog
	Applied varargs patch (#933411) and added test cases.
	* src/check.h.in tests/check_check_master.c tests/check_check_sub.c:
	Applied fail_if (#709167) patch.

2004-08-16 hugo303

	* doc/tutorial.sgml: Applied 'newbies' patch #995028 for autoconf doc.
	* rpm/check.spec.in: Applied doc patch #995028 from Bill Barnard.

2004-06-04 hugo303

	* tests/: test_log_output.sh test_output.sh: Fixed portability
	problem by changing == to =.

2004-05-26 hugo303

	* rpm/check.spec.in: Changed copyright.

2004-05-25 hugo303
